--- a/package.json
+++ b/package.json
@@ -9,23 +9,22 @@
     "start": "webpack-serve --config ./webpack.config.js --content ./dev --port 8080",
     "build": "webpack --config ./webpack.config.build.js",
     "test": "jest ./src",
-    "watch-tests": "jest ./src --watch"
+    "test-watch": "jest ./src --watch"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-syntax-decorators": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-syntax-decorators": "^7.2.0",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "babel-core": "^7.0.0-bridge",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.0",
-    "jest": "^23.6.0",
-    "jest-cli": "^23.6.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-serve": "^2.0.2"
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
+    "jest": "^24.9.0",
+    "jest-cli": "^24.9.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "webpack-serve": "^3.1.1"
   },
   "dependencies": {}
 }
