--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "repository": "github:geoctrl/simple-state",
   "scripts": {
-    "start": "webpack-serve --config ./webpack.config.js --content ./dev --port 8080",
+    "start": "webpack-dev-server --config ./webpack.config.js",
     "build": "webpack --config ./webpack.config.build.js",
     "test": "jest ./src",
     "test-watch": "jest ./src --watch"
@@ -24,7 +24,7 @@
     "react-dom": "^16.9.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
-    "webpack-serve": "^3.1.1"
+    "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {}
 }
