--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@geoctrl/simple-state",
-  "version": "2.0.0",
+  "name": "lipid",
+  "version": "1.0.0",
   "main": "build/index.js",
   "author": "@geoctrl",
   "license": "MIT",
-  "repository": "github:geoctrl/simple-state",
+  "repository": "github:geoctrl/lipid",
+  "sideEffects": false,
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack --config webpack.config.build.js",
@@ -16,12 +17,15 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/plugin-syntax-decorators": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-lodash": "^3.3.4",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
+    "lodash-webpack-plugin": "^0.11.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "webpack": "^4.41.5",
