--- a/package.json
+++ b/package.json
@@ -1,41 +1,31 @@
 {
   "name": "lipid",
-  "version": "1.0.8",
+  "version": "2.0.0",
   "main": "build/index.js",
   "author": "@geoctrl",
   "license": "MIT",
   "repository": "github:geoctrl/lipid",
-  "sideEffects": false,
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack --config webpack.config.build.js",
-    "watch": "webpack --watch --config webpack.config.build.js",
+    "build": "webpack",
+    "build-watch": "webpack --watch",
     "test": "jest ./src",
     "test-watch": "jest ./src --watch"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@babel/plugin-syntax-decorators": "^7.8.3",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-lodash": "^3.3.4",
-    "jest": "^24.9.0",
-    "jest-cli": "^24.9.0",
-    "lodash-webpack-plugin": "^0.11.5",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "@types/jest": "^27.4.0",
+    "@types/lodash-es": "^4.17.6",
+    "jest": "^27.5.1",
+    "jest-cli": "^27.5.1",
+    "jsdom": "^19.0.0",
+    "react": "^17.0.2",
+    "ts-jest": "^27.1.3",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "lodash": "^4.17.15",
-    "rxjs": "^6.5.4"
+    "lodash-es": "^4.17.21",
+    "rxjs": "^7.5.4"
   }
 }
