--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lipid",
   "version": "2.0.0",
-  "main": "build/index.js",
+  "main": "lipid.js",
   "author": "@geoctrl",
   "license": "MIT",
   "repository": "github:geoctrl/lipid",
@@ -14,10 +14,11 @@
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "@types/lodash-es": "^4.17.6",
+    "@types/react": "^17.0.39",
     "jest": "^27.5.1",
     "jest-cli": "^27.5.1",
     "jsdom": "^19.0.0",
-    "react": "^17.0.2",
+    "rxjs": "^7.5.4",
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
@@ -25,7 +26,10 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "lodash-es": "^4.17.21",
-    "rxjs": "^7.5.4"
+    "lodash-es": "^4.17.21"
+  },
+  "peerDependencies": {
+    "react": ">=16",
+    "rxjs": ">=6"
   }
 }
