--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "outDir": "./",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "module": "umd",
-    "target": "es6",
+    "module": "es6",
+    "target": "ESNext",
     "moduleResolution": "Node",
     "declaration": true,
   },
