--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./build",
+    "outDir": "./",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "module": "esnext",
