--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lipid",
-  "version": "2.0.0-beta.12",
+  "version": "2.0.0-beta.13",
   "main": "./lipid.js",
   "author": "@geoctrl",
   "license": "MIT",
@@ -12,17 +12,21 @@
     "test-watch": "jest ./src --watch"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.16.8",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/jest": "^27.4.0",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^17.0.39",
+    "babel-jest": "^27.5.1",
     "jest": "^27.5.1",
     "jest-cli": "^27.5.1",
     "jsdom": "^19.0.0",
     "rollup": "^2.68.0",
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.6",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.5",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
@@ -32,8 +36,7 @@
     "rxjs": "^7.5.4"
   },
   "peerDependencies": {
-    "react": ">=16",
-    "rxjs": ">=6"
+    "react": ">=16"
   },
   "peerDependenciesMeta": {
     "react": {
