--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lipid",
-  "version": "2.0.0-beta.14",
+  "version": "2.0.0",
   "main": "./lipid.js",
   "author": "@geoctrl",
   "license": "MIT",
