--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "target": "ESNext",
+    "target": "es6",
     "moduleResolution": "node",
     "declaration": true,
     "allowJs": true
